test/ProvarANT/00D20000000m8SbEAI/objects/DynamicObjects__c.object
<CustomObject>
    <fields>
        <fullName>Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox description</description>
        <inlineHelpText>Please check or uncheck it</inlineHelpText>
        <label>Checkbox Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Currency Description</description>
        <inlineHelpText>Enter Currency Amount</inlineHelpText>
        <label>Currency Label</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <description>Date and Time Description</description>
        <inlineHelpText>Enter Date and Time</inlineHelpText>
        <label>Date Time Label</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date Description</description>
        <inlineHelpText>Enter Date</inlineHelpText>
        <label>Date Label</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email Description</description>
        <inlineHelpText>Enter Email</inlineHelpText>
        <label>Email Label</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <description>Geolocation Description</description>
        <inlineHelpText>Enter Geolocation</inlineHelpText>
        <label>Geolocation Label</label>
        <required>true</required>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <description>Number Description</description>
        <inlineHelpText>Enter Number</inlineHelpText>
        <label>Number Label</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <description>Percent Description</description>
        <inlineHelpText>Enter Percent</inlineHelpText>
        <label>Percent Label</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone Description</description>
        <inlineHelpText>Enter Phone Number</inlineHelpText>
        <label>Phone Label</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PickList_MultiSelect__c</fullName>
        <description>Multi Value Description</description>
        <inlineHelpText>Enter Multi Value</inlineHelpText>
        <label>PickList MultiSelect Label</label>
        <picklist>
            <picklistValues>
                <fullName>Value 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 5</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PickList__c</fullName>
        <description>PickList Description</description>
        <inlineHelpText>Enter PickList</inlineHelpText>
        <label>PickList label</label>
        <picklist>
            <picklistValues>
                <fullName>test 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>test 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>test 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>test 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>test 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TextArea_Long__c</fullName>
        <description>TextArea_Long Description</description>
        <inlineHelpText>Enter TextArea_Long</inlineHelpText>
        <label>TextArea_Long Label</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TextArea_Rich__c</fullName>
        <description>TextArea_Rich Description</description>
        <inlineHelpText>Enter TextArea_Rich</inlineHelpText>
        <label>TextArea_Rich Label</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TextArea__c</fullName>
        <description>TextArea Description</description>
        <inlineHelpText>Enter TextArea</inlineHelpText>
        <label>TextArea Label</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Text_Encrypted__c</fullName>
        <description>Text_Encrypted Description</description>
        <inlineHelpText>Enter Text_Encrypted</inlineHelpText>
        <label>Text_Encrypted Label</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <description>Text Description</description>
        <inlineHelpText>Enter Text</inlineHelpText>
        <label>Text Label</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>URL Description</description>
        <inlineHelpText>Enter URL</inlineHelpText>
        <label>URL Label</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>DynamicObjects</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>DynamicObjects Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DynamicObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Date_is_a_week_later</fullName>
        <active>true</active>
        <errorConditionFormula>Date__c - TODAY() &lt; 7</errorConditionFormula>
        <errorDisplayField>Date__c</errorDisplayField>
        <errorMessage>Date should be ahead by 7 days atleast</errorMessage>
    </validationRules>
</CustomObject>